Add accordion to experience section

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -68,6 +68,10 @@
         "FROM_DATE": "March 2022",
         "TO_DATE": "August 2022",
         "RESPONSIBILITIES": [
+          "Responsible for the development of a Node.js application for automating stock loading, resulting in a daily time saving of 45 minutes and reducing potential errors.",
+          "Responsible for the development of a Node.js application for automating stock loading, resulting in a daily time saving of 45 minutes and reducing potential errors.",
+          "Responsible for the development of a Node.js application for automating stock loading, resulting in a daily time saving of 45 minutes and reducing potential errors.",
+          "Responsible for the development of a Node.js application for automating stock loading, resulting in a daily time saving of 45 minutes and reducing potential errors.",
           "Responsible for the development of a Node.js application for automating stock loading, resulting in a daily time saving of 45 minutes and reducing potential errors."
         ]
       }
