--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -82,21 +82,21 @@
     "PROJECTS_LIST": [
       {
         "NAME": "Ryutech",
-        "DESCRIPTION": "B2C ecommerce crafted with Next.js, GraphQL and TailwindCSS.",
-        "GITHUB_LINK": "",
-        "PROJECT_LINK": ""
+        "DESCRIPTION": "B2C ecommerce creado con Next.js, GraphQL y TailwindCSS.",
+        "GITHUB_LINK": "https://github.com/ivomiyashiro/ryutech",
+        "PROJECT_LINK": "https://ryutech.vercel.app/"
       },
       {
         "NAME": "NoBugs Books",
-        "DESCRIPTION": "B2C ecommerce crafted with Next.js, GraphQL and TailwindCSS.",
-        "GITHUB_LINK": "",
-        "PROJECT_LINK": ""
+        "DESCRIPTION": "B2C ecommerce creado con Next.js, GraphQL y TailwindCSS.",
+        "GITHUB_LINK": "https://github.com/ivomiyashiro/bookshop-api",
+        "PROJECT_LINK": "https://nobugsbooks.vercel.app/"
       },
       {
         "NAME": "Gymrat",
-        "DESCRIPTION": "B2C ecommerce crafted with Next.js, GraphQL and TailwindCSS.",
-        "GITHUB_LINK": "",
-        "PROJECT_LINK": ""
+        "DESCRIPTION": "B2C ecommerce creado con Next.js, GraphQL y TailwindCSS.",
+        "GITHUB_LINK": "https://github.com/ivomiyashiro/gymrat",
+        "PROJECT_LINK": "https://gymrat-nextjs.vercel.app/"
       }
     ]
   },
