Remove arg emoji

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -19,7 +19,7 @@
     "TITLE": "A little about me",
     "PARAGRAPH_1": {
       "PART_1": "👋 Hello! I am",
-      "PART_2": "years old, I was born in Argentina 🇦🇷 and I am passionate about Software Development. I enjoy creating scalable and efficient applications, both on the server and client sides."
+      "PART_2": "years old, I was born in Argentina and I am passionate about Software Development. I enjoy creating scalable and efficient applications, both on the server and client sides."
     },
     "PARAGRAPH_2": "I seek to continually grow as a professional and acquire new knowledge that allows me to achieve success in any project.",
     "PARAGRAPH_3": "I am currently studying a Bachelor's degree in Systems 📚 at Universidad Argentina de la Empresa (UADE).",
